# car_identifier

./: .gitignore  DATASETS.md  README.md  RESULTS.md  demo.py  pyproject.toml  requirements.txt
audit/: __init__.py  __main__.py  log.py  store.py
calibration/: dataset.py  isotonic.py  run.py
car3d/: calibration.py  geometry.py  match.py  profile_model.py  render.py
datasets/: cityflow.py  cityflow_video.py  config.py  vehicleid.py  veri776.py
eval/: ablation.py  cross_camera.py  embed_dataset.py  hard_negatives.py  plots.py  reliability.py  retrieval.py  run.py
perception/: attributes.py  detector.py  embedder.py  fastreid_backbone.py  observe.py  plates.py  real_observe.py  types.py
reasoning/: cascade.py  corroboration.py  counterfactual.py  distinctiveness.py  facts.py  plausibility.py  profile.py  signals.py  updates.py  weights.py
scripts/: analyze_cityflow_recognizability.py  calibrate_cityflow.py  dev_server.py  inspect_cityflow_calibration.py  run_cityflow_console.py  sweep_cityflow.py
server/: api.py  db.py  feed.py  main.py  real_feed.py  schemas.py  ws.py
sim/: emitter.py  fleet.py  model.py  render.py  road_graph.py  routes.py
tests/: test_audit.py  test_calibration.py  test_car3d.py  test_cascade.py  test_cityflow_graph.py  test_cityflow_video.py  test_corroboration.py  test_counterfactual.py  test_datasets.py  test_detector.py  test_distinctiveness.py  test_eval_mining_ablation.py  test_eval_retrieval.py  test_fleet.py  test_inspector.py  test_lifecycle.py  test_perception.py  test_plates.py  test_plausibility.py  test_real_feed.py  (+13 more)
(+16 files in other folders)
