[project]
name = "eyes-everywhere"
version = "0.1.0"
description = "Real-time distributed vehicle re-identification demo on synthetic data"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["sim", "perception", "reasoning", "tracking", "server", "calibration"]
